--- a/src/colecoes.html
+++ b/src/colecoes.html
@@ -245,9 +245,7 @@
             <li><a href="colecoes.html">Coleções</a></li>
             <li><a href="review-galera.html">Review da Galera</a></li>
         </ul>
-        <button id="btn-login" onclick="window.location.href='login.html'" style="margin-left: 16px; background: #e50914; color: #fff; border: none; border-radius: 4px; padding: 8px 16px; cursor: pointer;">
-            Entrar na sua conta
-        </button>
+        <div id="area-usuario"></div>
     </nav>
 
     <div class="main-content">
@@ -344,12 +342,23 @@
 
     <script>
 const usuario = JSON.parse(localStorage.getItem('usuario'));
-
-if (!usuario) {
-  alert('Você precisa estar logado para acessar as coleções.');
-  window.location.href = 'index.html';
+const areaUsuario = document.getElementById('area-usuario');
+if (usuario) {
+    areaUsuario.innerHTML = `
+        <span style="color:#fff;margin-right:12px;">Olá, ${usuario.nome}</span>
+        <button id="btn-logout" style="background:#e50914;color:#fff;border:none;border-radius:4px;padding:8px 16px;cursor:pointer;">Sair</button>
+    `;
+    document.getElementById('btn-logout').onclick = function() {
+        localStorage.removeItem('usuario');
+        window.location.href = 'login.html';
+    };
+} else {
+    areaUsuario.innerHTML = `
+        <button onclick="window.location.href='login.html'" style="background:#e50914;color:#fff;border:none;border-radius:4px;padding:8px 16px;cursor:pointer;">Entrar na sua conta</button>
+    `;
 }
-
+</script>
+<script>
 document.getElementById('form-colecao').addEventListener('submit', async function(event) {
   event.preventDefault();
   const nome = document.getElementById('nome-colecao').value;
