--- a/src/index.html
+++ b/src/index.html
@@ -229,24 +229,22 @@ async function carregarPopulares() {
 // Sempre carregue os filmes, independente do login
 carregarPopulares();
 
-// Personalização do cabeçalho
+// Script padrão para área do usuário
 const usuario = JSON.parse(localStorage.getItem('usuario'));
 const areaUsuario = document.getElementById('area-usuario');
-if (areaUsuario) {
-    if (usuario) {
-        areaUsuario.innerHTML = `
-            <span style="color:#fff;margin-right:12px;">Olá, ${usuario.nome}</span>
-            <button id="btn-logout" style="background:#e50914;color:#fff;border:none;border-radius:4px;padding:8px 16px;cursor:pointer;">Sair</button>
-        `;
-        document.getElementById('btn-logout').onclick = function() {
-            localStorage.removeItem('usuario');
-            window.location.href = 'login.html';
-        };
-    } else {
-        areaUsuario.innerHTML = `
-            <button onclick="window.location.href='login.html'" style="background:#e50914;color:#fff;border:none;border-radius:4px;padding:8px 16px;cursor:pointer;">Entrar na sua conta</button>
-        `;
-    }
+if (usuario) {
+    areaUsuario.innerHTML = `
+        <a href="perfil.html" style="color:#fff;margin-right:12px;text-decoration:none;font-weight:500;">Olá, ${usuario.nome}</a>
+        <button id="btn-logout" style="background:#e50914;color:#fff;border:none;border-radius:4px;padding:8px 16px;cursor:pointer;">Sair</button>
+    `;
+    document.getElementById('btn-logout').onclick = function() {
+        localStorage.removeItem('usuario');
+        window.location.href = 'login.html';
+    };
+} else {
+    areaUsuario.innerHTML = `
+        <button onclick="window.location.href='login.html'" style="background:#e50914;color:#fff;border:none;border-radius:4px;padding:8px 16px;cursor:pointer;">Entrar na sua conta</button>
+    `;
 }
 </script>
 </body>
