--- a/src/colecoes.html
+++ b/src/colecoes.html
@@ -288,10 +288,20 @@
 
     <script>
     // Usuário logado
-    const usuario = JSON.parse(localStorage.getItem('usuario'));
+    let usuario = null;
+    try {
+        const userData = localStorage.getItem('usuario');
+        if (userData && userData !== 'undefined' && userData !== 'null') {
+            usuario = JSON.parse(userData);
+        }
+    } catch (e) {
+        console.error('Erro ao carregar dados do usuário:', e);
+        localStorage.removeItem('usuario'); // Remove dados corrompidos
+    }
+    
     // Script para área do usuário
     const areaUsuario = document.getElementById('area-usuario');
-    if (usuario) {
+    if (usuario && usuario.id && usuario.nome) {
         areaUsuario.innerHTML = `
             <a href="perfil.html" style="color:#fff;margin-right:12px;text-decoration:none;font-weight:500;">Olá, ${usuario.nome}</a>
             <button id="btn-logout" style="background:#e50914;color:#fff;border:none;border-radius:4px;padding:8px 16px;cursor:pointer;">Sair</button>
