--- a/src/detalhes-obra.html
+++ b/src/detalhes-obra.html
@@ -92,9 +92,19 @@
     </footer>
     <script>
     // Cabeçalho do usuário
-    const usuario = JSON.parse(localStorage.getItem('usuario'));
+    let usuario = null;
+    try {
+        const userData = localStorage.getItem('usuario');
+        if (userData && userData !== 'undefined' && userData !== 'null') {
+            usuario = JSON.parse(userData);
+        }
+    } catch (e) {
+        console.error('Erro ao carregar dados do usuário:', e);
+        localStorage.removeItem('usuario'); // Remove dados corrompidos
+    }
+    
     const areaUsuario = document.getElementById('area-usuario');
-    if (usuario) {
+    if (usuario && usuario.id && usuario.nome) {
         areaUsuario.innerHTML = `
             <span style="color:#fff;margin-right:12px;">Olá, ${usuario.nome}</span>
             <button id="btn-logout" style="background:#e50914;color:#fff;border:none;border-radius:4px;padding:8px 16px;cursor:pointer;">Sair</button>
@@ -108,13 +118,19 @@
             <button onclick="window.location.href='login.html'" style="background:#e50914;color:#fff;border:none;border-radius:4px;padding:8px 16px;cursor:pointer;">Entrar na sua conta</button>
         `;
     }
-    </script>
-    <script>
+    
     // Parâmetros da URL
     const tmdbApiKey = '25aa122e262151673e05f311eaeb56ba';
     const params = new URLSearchParams(window.location.search);
     const obraId = params.get('id');
     const tipo = params.get('tipo');
+
+    // Avaliação: só mostra se usuário estiver logado e obra existe
+    if (!usuario || !obraId || !tipo) {
+        document.getElementById('avaliar-obra').style.display = 'none';
+    } else {
+        document.getElementById('avaliar-obra').style.display = 'flex';
+    }
 
     // Exibe mensagem de erro se faltar parâmetro
     if (!obraId || !tipo) {
@@ -157,13 +173,6 @@
     }
     </script>
     <script>
-    // Avaliação: só mostra se usuário estiver logado e obra existe
-    if (!usuario || !obraId || !tipo) {
-        document.getElementById('avaliar-obra').style.display = 'none';
-    } else {
-        document.getElementById('avaliar-obra').style.display = 'flex';
-    }
-
     // Sistema de estrelas 1 a 10
     let notaSelecionada = 0;
     const estrelasDiv = document.getElementById('estrelas');
