--- a/src/index.html
+++ b/src/index.html
@@ -4,125 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OpinaFlix - Críticas de Filmes e Séries</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background: #111;
-            color: #fff;
-        }
-        nav {
-            background: #181818;
-            padding: 0 32px;
-            display: flex;
-            align-items: center;
-            height: 56px;
-            justify-content: space-between;
-        }
-        .logo {
-            color: #e50914;
-            font-size: 2em;
-            font-weight: bold;
-            text-decoration: none;
-        }
-        ul {
-            list-style: none;
-            display: flex;
-            gap: 32px;
-            margin: 0;
-            padding: 0;
-        }
-        ul li a {
-            color: #fff;
-            text-decoration: none;
-            font-weight: 500;
-            transition: color 0.2s;
-        }
-        ul li a:hover {
-            color: #e50914;
-        }
-        .search-bar {
-            display: flex;
-            align-items: center;
-            gap: 0;
-        }
-        #search-input {
-            padding: 6px 10px;
-            border: none;
-            border-radius: 4px 0 0 4px;
-            font-size: 1em;
-            outline: none;
-        }
-        #search-button {
-            background: #e50914;
-            color: #fff;
-            border: none;
-            border-radius: 0 4px 4px 0;
-            padding: 7px 14px;
-            cursor: pointer;
-            font-size: 1em;
-        }
-        #btn-login {
-            margin-left: 16px;
-            background: #e50914;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            padding: 8px 16px;
-            cursor: pointer;
-            font-weight: bold;
-        }
-        .main-content {
-            text-align: center;
-            margin-top: 60px;
-        }
-        .main-content h1 {
-            font-size: 2.5em;
-            margin-bottom: 16px;
-        }
-        .main-content p {
-            color: #ccc;
-            font-size: 1.2em;
-        }
-        .cta-btn {
-            background: #e50914;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            padding: 14px 32px;
-            font-size: 1.1em;
-            font-weight: bold;
-            cursor: pointer;
-            margin-top: 24px;
-        }
-        .features {
-            display: flex;
-            justify-content: center;
-            gap: 32px;
-            margin: 48px 0 0 0;
-        }
-        .feature-card {
-            background: #fff;
-            color: #111;
-            border-radius: 8px;
-            padding: 32px 24px;
-            width: 220px;
-            box-shadow: 0 2px 16px #0002;
-            text-align: center;
-        }
-        .feature-card i {
-            color: #e50914;
-            font-size: 2em;
-            margin-bottom: 12px;
-        }
-        @media (max-width: 900px) {
-            .features {
-                flex-direction: column;
-                align-items: center;
-                gap: 24px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -133,6 +15,10 @@
             <li><a href="colecoes.html">Coleções</a></li>
             <li><a href="review-galera.html">Review da Galera</a></li>
         </ul>
+        <div class="search-bar">
+            <input type="text" id="search-input" placeholder="Buscar filmes e séries...">
+            <button onclick="buscar()" id="search-button">🔍</button>
+        </div>
         <div id="area-usuario"></div>
     </nav>
 
@@ -144,33 +30,10 @@
         <button class="cta-btn" onclick="window.location.href='login.html'">Cadastre-se Grátis</button>
     </div>
 
-    <div style="background:#fff; color:#111; margin-top:48px; padding:32px 0;">
-        <h2 style="text-align:center; margin-bottom:32px;">Com o OpinaFlix você pode:</h2>
-        <div class="features">
-            <div class="feature-card">
-                <i class="fas fa-film"></i>
-                <h3>Registrar e Avaliar</h3>
-                <p>Registre suas opiniões sobre filmes e séries.</p>
-            </div>
-            <div class="feature-card">
-                <i class="fas fa-comments"></i>
-                <h3>Interagir com amigos</h3>
-                <p>Veja o que seus amigos estão assistindo e comentando.</p>
-            </div>
-            <div class="feature-card">
-                <i class="fas fa-list"></i>
-                <h3>Fazer Coleções</h3>
-                <p>Monte listas personalizadas de obras favoritas.</p>
-            </div>
-        </div>
-    </div>
-
-    <div id="search-results" style="margin: 40px auto; max-width: 900px;"></div>
-
     <!-- Populares Nessa semana -->
-    <div style="max-width: 1100px; margin: 48px auto 0 auto;">
-        <h2 style="color:#e50914; margin-bottom:24px;">Populares Nessa semana</h2>
-        <div id="populares" style="display:flex; flex-wrap:wrap; gap:16px;"></div>
+    <div style="max-width: 1100px; margin: 48px auto 0 auto; padding: 0 32px;">
+        <h2 style="color:#e50914; margin-bottom:24px; text-align:center;">Populares Nessa semana</h2>
+        <div id="populares" style="display:flex; flex-wrap:wrap; gap:16px; justify-content:center;"></div>
     </div>
 
     <!-- Rodapé -->
@@ -192,70 +55,90 @@
     </footer>
 
     <script>
-const tmdbApiKey = '25aa122e262151673e05f311eaeb56ba'; // Substitua pela sua chave
-
-// Populares Nessa semana (TMDB Trending)
-async function carregarPopulares() {
-    const url = `https://api.themoviedb.org/3/trending/all/week?api_key=${tmdbApiKey}&language=pt-BR`;
-    try {
-        const resposta = await fetch(url);
-        const dados = await resposta.json();
-        let html = '';
-        if (dados.results && dados.results.length > 0) {
-            dados.results.slice(0, 8).forEach(item => {
-                const titulo = item.title || item.name;
-                const ano = (item.release_date || item.first_air_date || '').slice(0,4);
-                const poster = item.poster_path 
-                    ? `https://image.tmdb.org/t/p/w200${item.poster_path}` 
-                    : 'https://via.placeholder.com/200x300?text=Sem+Imagem';
-                const tipo = item.title ? 'movie' : 'tv';
-                html += `
-                    <div style="width:200px; text-align:center; cursor:pointer;" onclick="window.location.href='detalhes-obra.html?id=${item.id}&tipo=${tipo}'">
-                        <img src="${poster}" alt="${titulo}" style="width:100%; border-radius:8px;">
-                        <div style="margin-top:8px; font-weight:bold;">${titulo}</div>
-                        <div style="color:#666;">${ano ? '('+ano+')' : ''}</div>
-                    </div>
-                `;
-            });
-        } else {
-            html = 'Nenhum resultado encontrado.';
+        // Função de busca
+        function buscar() {
+            const termo = document.getElementById('search-input').value.trim();
+            if (termo) {
+                window.location.href = `filmes-series.html?busca=${encodeURIComponent(termo)}`;
+            }
         }
-        document.getElementById('populares').innerHTML = html;
-    } catch (e) {
-        document.getElementById('populares').innerHTML = 'Erro ao carregar populares.';
-    }
-}
 
-// Sempre carregue os filmes, independente do login
-carregarPopulares();
+        // Enter para buscar
+        document.getElementById('search-input').addEventListener('keypress', function(e) {
+            if (e.key === 'Enter') {
+                buscar();
+            }
+        });
 
-// Script padrão para área do usuário
-let usuario = null;
-try {
-    const userData = localStorage.getItem('usuario');
-    if (userData && userData !== 'undefined' && userData !== 'null') {
-        usuario = JSON.parse(userData);
-    }
-} catch (e) {
-    console.error('Erro ao carregar dados do usuário:', e);
-    localStorage.removeItem('usuario'); // Remove dados corrompidos
-}
+        const tmdbApiKey = '25aa122e262151673e05f311eaeb56ba';
 
-const areaUsuario = document.getElementById('area-usuario');
-if (usuario && usuario.id && usuario.nome) {
-    areaUsuario.innerHTML = `
-        <a href="perfil.html" style="color:#fff;margin-right:12px;text-decoration:none;font-weight:500;">Olá, ${usuario.nome}</a>
-        <button id="btn-logout" style="background:#e50914;color:#fff;border:none;border-radius:4px;padding:8px 16px;cursor:pointer;">Sair</button>
-    `;
-    document.getElementById('btn-logout').onclick = function() {
-        localStorage.removeItem('usuario');
-        window.location.href = 'login.html';
-    };
-} else {
-    areaUsuario.innerHTML = `
-        <button onclick="window.location.href='login.html'" style="background:#e50914;color:#fff;border:none;border-radius:4px;padding:8px 16px;cursor:pointer;">Entrar na sua conta</button>
-    `;
-}
-</script>
+        // Populares Nessa semana (TMDB Trending)
+        async function carregarPopulares() {
+            const url = `https://api.themoviedb.org/3/trending/all/week?api_key=${tmdbApiKey}&language=pt-BR`;
+            try {
+                const resposta = await fetch(url);
+                const dados = await resposta.json();
+                let html = '';
+                if (dados.results && dados.results.length > 0) {
+                    dados.results.slice(0, 8).forEach(item => {
+                        const titulo = item.title || item.name;
+                        const ano = (item.release_date || item.first_air_date || '').slice(0,4);
+                        const nota = item.vote_average ? item.vote_average.toFixed(1) : '0.0';
+                        const poster = item.poster_path 
+                            ? `https://image.tmdb.org/t/p/w200${item.poster_path}` 
+                            : 'https://via.placeholder.com/200x300?text=Sem+Imagem';
+                        const tipo = item.title ? 'movie' : 'tv';
+                        html += `
+                            <div style="width:200px; text-align:center; cursor:pointer; background:#1e1e1e; border-radius:8px; overflow:hidden; transition:transform 0.3s ease; box-shadow: 0 2px 8px rgba(0,0,0,0.3);" onclick="window.location.href='detalhes-obra.html?id=${item.id}&tipo=${tipo}'" onmouseover="this.style.transform='translateY(-4px)'" onmouseout="this.style.transform='translateY(0)'">
+                                <img src="${poster}" alt="${titulo}" style="width:100%; height:auto; display:block;">
+                                <div style="padding:12px;">
+                                    <div style="margin:0 0 8px 0; font-size:1em; color:#fff; font-weight:600;">${titulo}</div>
+                                    <div style="margin:0; color:#ccc; font-size:0.9em;">${ano ? '('+ano+')' : ''}</div>
+                                    <div style="margin:4px 0 0 0; color:#ffd700; font-size:0.9em; font-weight:500;">★ ${nota}/10</div>
+                                </div>
+                            </div>
+                        `;
+                    });
+                } else {
+                    html = '<div style="color:#ccc; text-align:center; width:100%;">Nenhum resultado encontrado.</div>';
+                }
+                document.getElementById('populares').innerHTML = html;
+            } catch (e) {
+                document.getElementById('populares').innerHTML = '<div style="color:#e50914; text-align:center; width:100%;">Erro ao carregar populares.</div>';
+                console.error('Erro ao carregar filmes populares:', e);
+            }
+        }
+
+        // Sempre carregue os filmes, independente do login
+        carregarPopulares();
+
+        // Script padrão para área do usuário
+        let usuario = null;
+        try {
+            const userData = localStorage.getItem('usuario');
+            if (userData && userData !== 'undefined' && userData !== 'null') {
+                usuario = JSON.parse(userData);
+            }
+        } catch (e) {
+            console.error('Erro ao carregar dados do usuário:', e);
+            localStorage.removeItem('usuario'); // Remove dados corrompidos
+        }
+
+        const areaUsuario = document.getElementById('area-usuario');
+        if (usuario && usuario.id && usuario.nome) {
+            areaUsuario.innerHTML = `
+                <a href="perfil.html" style="color:#fff;margin-right:12px;text-decoration:none;font-weight:500;">Olá, ${usuario.nome}</a>
+                <button id="btn-logout" style="background:#e50914;color:#fff;border:none;border-radius:4px;padding:8px 16px;cursor:pointer;font-weight:500;">Sair</button>
+            `;
+            document.getElementById('btn-logout').onclick = function() {
+                localStorage.removeItem('usuario');
+                window.location.href = 'login.html';
+            };
+        } else {
+            areaUsuario.innerHTML = `
+                <button onclick="window.location.href='login.html'" style="background:#e50914;color:#fff;border:none;border-radius:4px;padding:8px 16px;cursor:pointer;font-weight:500;">Entrar na sua conta</button>
+            `;
+        }
+    </script>
 </body>
 </html>
