--- a/src/review-galera.html
+++ b/src/review-galera.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Review da Galera - OpinaFlix</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         body { background: #181818; color: #fff; font-family: Arial, sans-serif; margin: 0; }
         .review-list { max-width: 800px; margin: 40px auto; }
